feat(market-intelligence): add second production strategy and split strategy governance
Story 0014 - Second Production Strategy (OHLC_RANGE_EXPANSION_V1):
- New OhlcRangeExpansionEvaluator: volatility-expansion setup requiring
  PRICE_CHANGE + RANGE_PERCENTAGE (reuses existing OhlcRangeAnalysis
  capability measurements, deterministic thresholds as parameters)
- Registered in BuiltinStrategies alongside the legacy fixture; flows
  through loading, applicability filtering, generic semantic resolution,
  evaluation and matching with zero strategy-ID branching
- Generalized StrategyEvaluationContextFactory semantic-input resolution:
  mechanical UPPER_SNAKE_CASE -> camelCase measurement mapping replaces
  legacy-specific isPriceChangeKey/isObservedAtKey branches; OBSERVED_AT
  kept as a generic evidence-metadata convention
- Fixed latent bug: StrategyEvaluation.hashCodeFields used List.of which
  rejects nulls (NPE on NO_MATCH/NOT_EVALUABLE equality/hash); now uses
  Arrays.asList with dedicated test coverage
- Proof tests: applicability filtering, MATCH/NO_MATCH/NOT_EVALUABLE,
  generic resolution, simultaneous multi-strategy evaluation independent
  of iteration order, PipelineRun opportunityId semantics unchanged

Story 0015 - Clarify Strategy Governance Model (ADR-036):
- Split governance into two explicit dimensions on StrategyDefinition:
  validation/maturity (existing ValidationStatus + evidence) and new
  StrategyOperationalStatus (DISABLED | ENABLED | BOOTSTRAP_CONTROLLED_RUN
  | RETIRED) replacing the mixed single lifecycle (StrategyLifecycle removed)
- Domain invariants: ENABLED requires VALIDATED + evidence;
  BOOTSTRAP_CONTROLLED_RUN reserved for UNVALIDATED bootstrap fixture and
  terminal-bound to RETIRED; single source of truth for live eligibility:
  StrategyDefinition.isEligibleForLiveEvaluation()
- Pipeline gates on governance BEFORE market applicability, both before
  context assembly/evaluator; ineligible strategies are not selected and
  never pro